# nornir-buildmanager

./: .gitignore  README.md  build_exceptions.py  ez_setup.py  nornir-buildmanager.pyproj  pyproject.toml  readme_setup.txt  requirements-min.txt  requirements.txt  setup.py  setup2.py  tmp_setup.py  versionhistory.rst
.github/workflows/: python-app.yml
nornir_buildmanager/: BuildPipeline.py  Config.py  ImportManager.py  LowPriority.py  VolumeFinder.py  VolumeManagerETree.py  VolumeManagerHelpers.py  XPath.py  __init__.py  __main__.py  argparsexml.py  build.py  debugging.py  exceptions.py  metadatautils.py  pipeline_exceptions.py  pipelinemanager.py  search.py  templates.py
nornir_buildmanager/Schemas/: BuildScript.xsd  DataTypes.xsd  Importers.xsd  Volumes.xsd
nornir_buildmanager/config/: Pipelines.xml  importers.xml  sphinxdocs.py
nornir_buildmanager/importers/: __init__.py  dm4.py  filenameparser.py  find.py  idoc.py  mdoc.py  mrc.py  pmg.py  sectionimage.py  serialem_utils.py  serialemlog.py  shared.py
nornir_buildmanager/metadata/: __init__.py  baseobject.py  migrate.py  sqlite_backend.py  tilesetinfo.py  versions.py  volume.py  volume_metadata.py  xml_backend.py
nornir_buildmanager/operations/: ImageReport.html  Report.html  __init__.py  block.py  channel.py  diagnostics.py  filter.py  general.py  migration.py  pruneobj.py  registration.py  reporting.py  setters.py  stosgroup.py  stosmap.py  tile.py  versions.py  vikingxml.py
nornir_buildmanager/operations/helpers/: __init__.py  mosaicvolume.py  stosgroupvolume.py
nornir_buildmanager/validation/: __init__.py  image.py  transforms.py
nornir_buildmanager/volumemanager/: VolumeManagerHelpers.py  __init__.py  autolevelhintnode.py  blocknode.py  channelnode.py  contrasthandler.py  datanode.py  elementwrapping.py  exceptions.py  filternode.py  histogrambasenode.py  histogramnode.py  imagenode.py  imagesetbasenode.py  imagesetnode.py  inputtransformhandler.py  levelnode.py  lockable.py  mappingnode.py  mosaicbasenode.py  notesnode.py  prunenode.py  pyramidlevelhandler.py  scalenode.py  searchmeta.py  sectionmappingsnode.py  sectionnode.py  stosgroupnode.py  stosmapnode.py  tilepyramidnode.py  tilesetnode.py  transform_interface.py  transformdatanode.py  transformnode.py  validation.py  versions.py  volumemanager.py  volumenode.py  xcontainerelementwrapper.py  xelementwrapper.py  (+4 more)
scripts/: CMPAlign.cmd  CMPBuild.cmd  CMPIntoTEMAlign.cmd  CMPIntoTEMBuild.cmd  SliceToVolumeReport.cmd  StartServer.cmd  TEMAlign.cmd  TEMBuild.cmd  TEMBuildMosaic.cmd  TEMPrepare.cmd  install_nornir_jamesra_dev  install_nornir_jamesra_dev.cmd  install_nornir_jamesra_master.cmd  nornir-build.py  uninstall_nornir.cmd  upgrade_nornir.cmd
test/: __init__.py  test_metadata_migration.py  testbase.py
test/importers/: shared.py
test/pipeline/: __init__.py  setup_pipeline.py  test_LMBuild.py  test_VolumeManager.py  test_argparsexml.py  test_build.py  test_dm4.py  test_idoc.py  test_migration.py  test_pipelinemanager.py  test_pmg.py  test_sectionimage.py
test/pipeline/metadata/: test_tilesetinfo.py
test/pipeline/operations/: test_BlockOperations.py  test_General.py  test_PruneOperations.py  test_SectionToSectionMapping.py  test_TileOperations.py
test/pipeline/validation/: test_image.py  test_transform.py
test/validation/: validation.py
