[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
where = ["nornir_buildmanager"]

[project]
name = "nornir_buildmanager"
version = "1.5.0"
authors = [
  { name="James Anderson", email="James.R.Anderson@utah.edu" },
]
maintainers = [
  { name="Clement Vachet", email="cvachet@sci.utah.edu" },
]
description = "Scripts for the construction of 3D volumes from 2D image sets."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
	"psutil",
	"nornir_pools @ git+https://github.com/jamesra/nornir-pools@dev#egg=nornir_pools-1.5.0",
	"nornir_shared @ git+https://github.com/jamesra/nornir-shared@dev#egg=nornir_shared-1.5.0",
	"nornir_imageregistration @ git+https://github.com/jamesra/nornir-imageregistration@CuPy#egg=nornir_imageregistration-1.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
nornir-build = "nornir_buildmanager.build:Execute"

[project.optional-dependencies]
gpu = ["cupy"]

[tool.setuptools]
package-data = {"nornir_buildmanager" = ["config/*.xml"]}

[project.urls]
Homepage = "https://github.com/clementsan/nornir-buildmanager"
Issues = "https://github.com/clementsan/nornir-buildmanager/issues"
