[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["nornir_buildmanager*"]

[project]
name = "nornir_buildmanager"
version = "1.6.0"
authors = [
	{ name="James Anderson", email="James.R.Anderson@utah.edu" },
]
maintainers = [
	{ name="Clement Vachet", email="cvachet@sci.utah.edu" },
]
description = "Scripts for the construction of 3D volumes from 2D image sets."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
	"numpy >= 1.26",
	"scipy >= 1.11",
	"matplotlib >= 3.8",
	"psutil >= 5.9",
	"validators >= 0.23",
	"nornir_pools @ git+https://github.com/clementsan/nornir-pools.git@dev",
	"nornir_shared @ git+https://github.com/clementsan/nornir-shared.git@dev",
	"nornir_imageregistration @ git+https://github.com/clementsan/nornir-imageregistration.git@CuPy"
]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering",
]

[project.scripts]
nornir-build = "nornir_buildmanager.build:Execute"

[project.optional-dependencies]
gpu = ["cupy >= 13.0"]

[tool.setuptools]
package-data = {"nornir_buildmanager" = ["config/*.xml"]}

[project.urls]
Homepage = "https://github.com/clementsan/nornir-buildmanager"
Issues = "https://github.com/clementsan/nornir-buildmanager/issues"
