[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["nornir_buildmanager*"]

[project]
name = "nornir_buildmanager"
version = "1.4.1"
authors = [
  { name="James Anderson", email="James.R.Anderson@utah.edu" },
]
description = "Scripts for the construction of 3D volumes from 2D image sets."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
	"numpy",
	"scipy",
	"matplotlib",
	"psutil",
	"nornir_pools @ git+https://github.com/jamesra/nornir-pools#egg=nornir_pools-1.4.1",
	"nornir_shared @ git+https://github.com/jamesra/nornir-shared#egg=nornir_shared-1.4.1",
	"nornir_imageregistration @ git+https://github.com/jamesra/nornir-imageregistration#egg=nornir_imageregistration-1.4.1"
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
nornir-build = "nornir_buildmanager.build:Execute"

[tool.setuptools]
package-data = {"nornir_buildmanager" = ["config/*.xml"]}

[project.urls]
Homepage = "https://github.com/clementsan/nornir-buildmanager"
Issues = "https://github.com/clementsan/nornir-buildmanager/issues"
